# BloatwareHatao

./: .gitignore  BloatwareHatao.sh  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/workflows/: pre-release-checks.yml  release.yml
Manual/: manual.sh
Pro/vivo/: funtouchos-14.sh
Pro/xiaomi/: miui-13.sh  miui-14.sh
Safe/honor/: magicos-8.sh
Safe/xiaomi/: hyperos-1.sh  miui-13.sh  miui-14.sh
Ultra/huawei/: emui-12.sh
Ultra/infinix/: myos-13.sh
Ultra/motorola/: helloui-1.sh  myux-13.sh
Ultra/oppo/: coloros-13.sh  coloros-14.sh
Ultra/samsung/: oneui-4.sh  oneui-5.sh  oneui-6.sh
Ultra/vivo/: funtouchos-13.sh  funtouchos-14.sh
Ultra/xiaomi/: hyperos-1.sh  miui-13.sh
bloatwarehatao-core/: Cargo.toml
bloatwarehatao-core/src/: adb.rs  category.rs  config.rs  database.rs  device.rs  error.rs  lib.rs  package.rs  preset.rs  rescue.rs
bloatwarehatao-tui/: Cargo.toml
bloatwarehatao-tui/src/: app.rs  main.rs  state.rs  ui.rs
bloatwarehatao-tui/src/screens/: about.rs  device_info.rs  dialogs.rs  health.rs  home.rs  mod.rs  package_browser.rs  presets.rs  rescue.rs  settings.rs  support.rs  user_guide.rs  wireless.rs
cleaner3/realme/: realmeui-3.sh
docs/: tui-guide.md
lib/: core.sh  data.sh  ui.sh  utils.sh
