[package]
name = "bloatwarehatao-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for BloatwareHatao - ADB operations, package database, and device management"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-process.workspace = true
rusqlite.workspace = true
toml.workspace = true
directories.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
